2006-08-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/SchedulerUI/UIxAppointmentEditor.wox: completely
	rearranged the layout.

	* UI/WebServerResources/UIxAppointmentEditor.js: added code to
	manage showing and hiding appointment details.

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-privateContacts:inContext:]): init the SOGoAppointmentFolder's
	timezone by taking the current user's timezone setting.

	* SoObjects/Appointments/SOGoAptMailNotification.m: same as below.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -changeParticipationStatus:inContext:]):
	set default timezone to EST, although this code should be
	rewritten to handle a system and a user default value.

	* UI/Scheduler/UIxTimeDateControl.m ([UIxTimeDateControl
	-takeValuesFromRequest:_rqinContext:_ctx]): enhanced method to
	take the values from the hour and minute INPUTs when data is
	POSTed since we no longer use the UIxTimeSelector component.
	([UIxTimeDateControl -selectableHours]) 
	([UIxTimeDateControl -selectableMinutes]): new methods used by the
	template SELECTs to display reasonable and acceptable values
	instead of all the possibilities.

	* UI/WebServerResources/generic.js: adapted code for the new
	implementation of the UIxContactSelector component (added a
	"remove" button, removed the previous INPUT and replaced them with
	links of class "button").

	* UI/Scheduler/UIxTimeDateControl.h: separated interface from
	UIxTimeDateControl.m.

	* UI/Scheduler/UIxCalDayTable.m ([UIxCalDayTable -currentAppointmentDay]) 
	([UIxCalDayTable -currentAppointmentHour]): new methods that
	returns correctly formatted values used as attributes for JS code.

	* UI/Contacts/UIxContactSelector.m ([UIxContactSelector
	-initialContactsAsString]): renamed implementation of
	initialParticipants.
	([UIxContactSelector -currentContactId]) 
	([UIxContactSelector -currentContactName]): new methods used when